--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,8 @@ futures.workspace = true
 async-trait = "0.1"
 regex = "1"
 dirs = "5"
+base64 = "0.22"
+url = "2"
 
 # Internal crates
 pi-core.workspace = true
