--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "tauri": "tauri"
+        "tauri": "tauri",
+        "test": "vitest"
     },
     "dependencies": {
         "@tauri-apps/api": "^2.2.0",
@@ -18,14 +19,18 @@
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2.2.0",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.2",
         "@types/node": "^25.1.0",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
+        "jsdom": "^27.4.0",
         "postcss": "^8.5.1",
         "tailwindcss": "^3.4.17",
         "typescript": "~5.7.3",
-        "vite": "^6.0.7"
+        "vite": "^6.0.7",
+        "vitest": "^4.0.18"
     }
 }
