--- a/sidecar/pyproject.toml
+++ b/sidecar/pyproject.toml
@@ -43,3 +43,9 @@ select = ["E", "F", "W", "I", "UP", "B", "C4"]
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+]
