--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ tower = "0.5"
 tower-http = { version = "0.6", features = ["cors"] }
 
 # HTTP client (for LLM APIs)
-reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", features = ["json", "default-tls"] }
 
 # Headless browser
 chromiumoxide = { version = "0.7", default-features = false, features = [
