--- a/sidecar/pyproject.toml
+++ b/sidecar/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     # LLM Providers
     "anthropic>=0.42.0",
     "google-generativeai>=0.8.0",
+    "google-genai>=0.3.0",
+    "google-auth>=2.30.0",
     # Utilities
     "pydantic>=2.10.0",
     "aiofiles>=24.1.0",
@@ -44,7 +46,4 @@ asyncio_mode = "auto"
 testpaths = ["tests"]
 
 [dependency-groups]
-dev = [
-    "pytest>=9.0.2",
-    "pytest-asyncio>=1.3.0",
-]
+dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0"]
