--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,6 +39,8 @@ regex = "1"
 dirs = "5"
 base64 = "0.22"
 url = "2"
+sha2 = "0.10"
+rand = "0.8"
 teloxide = { version = "0.14", default-features = false, features = [
     "macros",
     "rustls",
