--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ tauri-plugin-shell = "2.2"
 # Workspace dependencies
 tokio.workspace = true
 tokio-util.workspace = true
+tokio-cron-scheduler.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 anyhow.workspace = true
