--- a/sidecar/pyproject.toml
+++ b/sidecar/pyproject.toml
@@ -23,10 +23,17 @@ dependencies = [
     "pydantic>=2.10.0",
     "aiofiles>=24.1.0",
     "numpy>=2.4.1",
+    "httpx>=0.28.1",
 ]
 
 [project.optional-dependencies]
 dev = ["pytest>=8.0.0", "pytest-asyncio>=0.25.0", "ruff>=0.9.0"]
+voice = [
+    "elevenlabs>=1.0.0",
+    "faster-whisper>=1.0.0",
+    "pydub>=0.25.1",
+    "openai>=1.50.0",
+]
 
 [build-system]
 requires = ["hatchling"]
