--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,6 +47,9 @@ teloxide = { version = "0.14", default-features = false, features = [
     "rustls",
     "ctrlc_handler",
 ] }
+cpal = "0.15"
+hound = "3.5"
+vosk = "0.3"
 
 # Internal crates
 pi-core.workspace = true
