--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -58,6 +58,7 @@ serenity = { version = "0.12", default-features = false, features = [
     "standard_framework",
     "utils",
 ] }
+serde_yaml = "0.9"
 
 # Internal crates
 pi-core.workspace = true
