--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@tauri-apps/api": "^2.2.0",
         "@tauri-apps/plugin-shell": "^2.2.0",
+        "lucide-react": "^0.563.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "zustand": "^5.0.3"
