--- a/sidecar/pyproject.toml
+++ b/sidecar/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "numpy>=2.4.1",
     "httpx>=0.28.1",
+    "faster-whisper>=1.0.0",
 ]
 
 [project.optional-dependencies]
