--- a/sidecars/ml/pyproject.toml
+++ b/sidecars/ml/pyproject.toml
@@ -1,30 +1,1 @@
-[project]
-name = "pi-sidecar-ml"
-version = "0.1.0"
-description = "Pi-Assistant Python sidecar for ML inference and training"
-requires-python = ">=3.11"
-dependencies = [
-    "torch>=2.5.0",
-    "pytorch-lightning>=2.4.0",
-    "transformers>=4.47.0",
-    "sentence-transformers>=3.4.0",
-    "llama-cpp-python>=0.3.0",
-    "pydantic>=2.10.0",
-    "aiofiles>=24.1.0",
-    "numpy>=2.4.1",
-    "httpx>=0.28.1",
-    "faster-whisper>=1.0.0",
-    "elevenlabs>=1.0.0",
-    "pydub>=0.25.1",
-    "openai>=1.50.0",
-    "pandas>=1.3.0",
-    "omegaconf>=2.1.0",
-    "hydra-core>=1.1.0",
-    "tqdm>=4.62.0",
-    "gymnasium>=0.26.0",
-    "stable-baselines3>=1.6.0",
-]
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+src/pi_sidecar/pyproject.toml
