--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,8 @@ target-version = "py311"
 
 [tool.uv.workspace]
 members = ["sidecars/ml", "sidecars/logic", "sidecars/shared"]
+
+[tool.uv.sources]
+pi-sidecar-shared = { workspace = true }
+machine-learning-zoo = { workspace = true }
+pi-sidecar-logic = { workspace = true }
