--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "tauri": "tauri",
-        "test": "vitest"
+        "test": "vitest",
+        "format": "prettier --write ."
     },
     "dependencies": {
         "@tauri-apps/api": "^2.2.0",
@@ -29,6 +30,7 @@
         "autoprefixer": "^10.4.20",
         "jsdom": "^27.4.0",
         "postcss": "^8.5.1",
+        "prettier": "^3.4.2",
         "tailwindcss": "^3.4.17",
         "typescript": "~5.7.3",
         "vite": "^6.0.7",
