Fixed linting issues

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,5 +19,5 @@ repos:
         name: prettier
         entry: npm run format
         language: system
-        types_or: [javascript, jsx, ts, tsx, css, html]
+        types_or: [ts, tsx]
         pass_filenames: false
