--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,5 +33,7 @@ dev = [
     "black>=26.1.0",
     "mypy>=1.19.1",
     "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
     "ruff>=0.14.14",
 ]
