--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "tauri": "tauri",
     "test": "vitest",
     "lint": "prettier --check \"**/*.{ts,tsx}\" && tsc --noEmit",
-    "format": "prettier --write \"**/*.{ts,tsx}\""
+    "format": "prettier --write \"**/*.{ts,tsx}\"",
+    "cypress:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.2.0",
@@ -30,6 +32,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^4.0.18",
     "autoprefixer": "^10.4.20",
+    "cypress": "^15.9.0",
     "jsdom": "^27.4.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
