--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,10 @@ line-length = 100
 target-version = "py311"
 
 [tool.uv.workspace]
-members = ["sidecars/ml", "sidecars/logic", "sidecars/shared"]
+members = ["sidecars/ml"]
 
 [tool.uv.sources]
-pi-sidecar-shared = { workspace = true }
 machine-learning-zoo = { workspace = true }
-pi-sidecar-logic = { workspace = true }
 
 [dependency-groups]
 dev = [
