--- a/sidecars/ml/pyproject.toml
+++ b/sidecars/ml/pyproject.toml
@@ -46,9 +46,11 @@ dependencies = [
     "gymnasium>=0.26.0",
     "huggingface_hub>=0.23.0",
     "stable-baselines3>=2.3.0",
-    "pi-sidecar-shared",
     "llama-cpp-python>=0.2.75",
     "transformers>=4.40.0",
+    "pydantic>=2.10.0",
+    "aiofiles>=24.1.0",
+    "httpx>=0.28.1",
 ]
 
 [project.optional-dependencies]
