--- a/sidecars/ml/pyproject.toml
+++ b/sidecars/ml/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "A comprehensive machine learning library with modular components for building and training various ML models"
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 authors = [{ name = "Machine Learning Zoo Contributors" }]
 maintainers = [{ name = "Machine Learning Zoo Contributors" }]
 keywords = [
@@ -28,8 +28,6 @@ classifiers = [
     "License :: OSI Approved :: GNU Affero General Public License v3",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -37,20 +35,50 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-    "torch>=1.9.0",
-    "numpy>=1.21.0",
-    "pandas>=1.3.0",
-    "omegaconf>=2.1.0",
-    "hydra-core>=1.1.0",
-    "tqdm>=4.62.0",
-    "gymnasium>=0.26.0",
-    "huggingface_hub>=0.23.0",
-    "stable-baselines3>=2.3.0",
-    "llama-cpp-python>=0.2.75",
-    "transformers>=4.40.0",
-    "pydantic>=2.10.0",
     "aiofiles>=24.1.0",
+    "anthropic>=0.5.0",
+    "boto3>=1.24.0",
+    "catboost>=1.0.4",
+    "ConfigSpace>=0.6.0",
+    "einops>=0.4.0",
+    "fastapi>=0.85.0",
+    "feedparser>=6.0.10",
+    "gymnasium>=0.26.0",
     "httpx>=0.28.1",
+    "huggingface_hub>=0.23.0",
+    "hvac>=1.1.0",
+    "hydra-core>=1.1.0",
+    "lightgbm>=3.3.2",
+    "lightning>=2.0.0",
+    "llama-cpp-python>=0.2.75",
+    "llvmlite>=0.40.0",
+    "matplotlib>=3.5.2",
+    "numba>=0.57.0",
+    "numpy>=1.21.0",
+    "omegaconf>=2.1.0",
+    "opentelemetry-api>=1.15.0",
+    "opentelemetry-exporter-otlp>=1.15.0",
+    "opentelemetry-instrumentation-fastapi>=0.38b0",
+    "opentelemetry-sdk>=1.15.0",
+    "optuna>=3.0.0",
+    "pandas>=1.3.0",
+    "pyarrow>=10.0.1",
+    "pydantic>=2.10.0",
+    "redis>=4.3.0",
+    "scikit-learn>=1.0.2",
+    "scipy>=1.7.3",
+    "shap>=0.40.0",
+    "stable-baselines3>=2.3.0",
+    "tensorboard>=2.10.0",
+    "tensordict>=0.6.0",
+    "torch>=1.9.0",
+    "torchrl>=0.6.0",
+    "tqdm>=4.62.0",
+    "transformers>=4.40.0",
+    "umap-learn>=0.5.4",
+    "uvicorn>=0.18.0",
+    "xgboost>=1.5.2",
+    "zstandard>=0.19.0",
 ]
 
 [project.optional-dependencies]
@@ -123,7 +151,7 @@ known_third_party = [
 ]
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
