--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,10 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: Rust Format Check
         run: cargo fmt --all -- --check
+      - name: Create Dummy Frontend Dist
+        run: |
+          mkdir -p dist
+          touch dist/index.html
       - name: Rust Clippy
         run: cargo clippy --workspace -- -D warnings
 
