--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["src-tauri", "crates/pi-core", "protocol/rust"]
+members = ["src-tauri", "crates/pi-core", "protocol/rust", "crates/pi-ai"]
 
 [workspace.package]
 version = "0.1.0"
