--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:wasm": "npm run build:wasm:core && npm run build:wasm:ai",
+    "build:wasm:core": "wasm-pack build crates/pi-core --target web --out-dir ../../src/wasm/pi-core",
+    "build:wasm:ai": "wasm-pack build crates/pi-ai --target web --out-dir ../../src/wasm/pi-ai",
     "preview": "vite preview",
     "tauri": "tauri",
     "test": "vitest",
@@ -39,6 +42,8 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.3",
     "vite": "^6.0.7",
+    "vite-plugin-top-level-await": "^1.6.0",
+    "vite-plugin-wasm": "^3.5.0",
     "vitest": "^4.0.18"
   }
 }
