--- a/crates/pi-core/Cargo.toml
+++ b/crates/pi-core/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib", "rlib"]
 serde.workspace = true
 serde_json.workspace = true
 uuid = { workspace = true, features = ["v4", "js"] }
+chrono = { version = "0.4.38", features = ["serde", "wasm-bindgen"] }
 thiserror.workspace = true
 wasm-bindgen = "0.2"
 tsify = { version = "0.4.5", features = ["js"] }
