--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -66,6 +66,7 @@ chrono-tz = "0.9"
 # Internal crates
 pi-core.workspace = true
 pi-protocol.workspace = true
+openapiv3 = "2.2.0"
 
 [features]
 default = ["custom-protocol"]
